welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: not found: value è
		if(((nums(i),nums(i+1)) == (6,6)) | ((nums(i),nums(i+1)) == (6,è))){
                                                                               ^