welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var occurences = 0
	for(i <- 0 to nums.length - 2){
		if(((nums(i),nums(i+1)) == (6,6)) | ((nums(i),nums(i+1)) == (6,è))){
			occurences = occurences + 1
		}
	}
	return occurences
}
